Moved The title section up into the header, fixed closing </nav> tag

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
         <a href="#skills">skills</a>
         <a href="#experience">experience</a>
         <a href="#contact">contact</a>
-        <nav>
-    </header>
-    <main>
+      </nav>
+
       <section>
         <h3>Software Developer, Designer, Artist</h3>
         <img alt="An image of Casey Joy" src="./casey_resized.jpg">
       </section>
+    </header>
+    <main>
       <section id="about">
         <h3>About</h3>
         <h5>Function + Asthetic</h5>
-
         <p>
           I'm an artist with an inclination for programming. After going to art school, I decided to put my tech skills
           to
