'Style Header and Skills Section' changes

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
   </head>
 
   <body>
-    <header>
+    <header class="blue">
       <h1>Casey Joy</h1>
       <nav>
-        <a href="#about">about</a>
-        <a href="#skills">skills</a>
-        <a href="#experience">experience</a>
-        <a href="#contact">contact</a>
+        <ul>
+        <li><a href="#about">about</a></li>
+        <li><a href="#skills">skills</a></li>
+        <li><a href="#experience">experience</a></li>
+        <li><a href="#contact">contact</a></li>
+      </ul>
       </nav>
 
       <section>
@@ -41,7 +43,7 @@
         </p>
       </section>
 
-      <section id="skills">
+      <section id="skills" class="blue">
         <h3>Skills</h3>
         <ul>
           <li>
