Added some fonts, changed some formatting

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- Short description of the document (limit to 150 characters) -->
     <!-- This content *may* be used as a part of search engine results. -->
     <meta name="description" content="A description of the page">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="./style.css">
   </head>
 
@@ -77,7 +80,7 @@
     </main>
     <footer>
       <section id="contact">
-        <h3>Casey Joy</h3>
+        <h2>Casey Joy</h2>
         <h5>Software Developer, Designer, Artist</h5>
 
         <a href="./CV.txt" download>
