Reworked the menu links styling and top name

--- a/index.html
+++ b/index.html
@@ -16,17 +16,21 @@
   <body>
     <header class="blue">
       <div class="container">
-        <h1>Casey Joy</h1>
-        <nav>
+        <nav class="menu">
+          <div>Casey Joy</div>
           <ul>
-            <li><a href="#about">about</a></li>
-            <li><a href="#skills">skills</a></li>
-            <li><a href="#experience">experience</a></li>
-            <li><a href="#contact">contact</a></li>
+            <li><a href="#about" class="menu-link">about</a></li>
+            <li>|</li>
+            <li><a href="#skills" class="menu-link">skills</a></li>
+            <li>|</li>
+            <li><a href="#experience" class="menu-link">experience</a></li>
+            <li>|</li>
+            <li><a href="#contact" class="menu-link">contact</a></li>
           </ul>
         </nav>
 
         <section>
+          <h1>Casey Joy</h1>
           <h3>Software Developer, Designer, Artist</h3>
           <img alt="An image of Casey Joy" src="./casey_resized.jpg">
         </section>
