Reworked experience section styling to line up with flexboxes

--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
           </ul>
         </nav>
 
-        <section>
-          <h1>Casey Joy</h1>
-          <h3>Software Developer, Designer, Artist</h3>
+        <section id="info">
+          <div>
+            <h1>Casey Joy</h1>
+            <h3>Software Developer, Designer, Artist</h3>
+          </div>
           <img alt="An image of Casey Joy" src="./casey_resized.jpg">
         </section>
       </div>
@@ -76,19 +78,28 @@
         <div class="container">
           <h3>Experience</h3>
           <ul>
-            <li>
-              <h4>2014-2019</h4>
-              <h5>Meticulon</h5>
-              <h6>Job title.</h6>
-              <p>A summary of the experience at the company.</p>
+            <li class="job">
+              <div class="job-col-left">
+                <div class="date">2014-2019</div>
+                <div class="company">Meticulon</div>
+              </div>
+              <div class="job-col-right">
+                <div>QA Tester, Jr Software Developer</div>
+                <div class="summary">Did software QA, development work.</div>
+              </div>
             </li>
-            <li>
-              <h4>2019-2020</h4>
-              <h5>Auticon</h5>
-              <h6>Job title.</h6>
-              <p>A summary of the experience at the company.</p>
+            <li class="job">
+              <div class="job-col-left">
+                <div class="date">2019-2020</div>
+                <div class="company">Auticon</div>
+              </div>
+              <div class="job-col-right">
+                <div>Jr Software Developer</div>
+                <div class="summary">Did software development work.</div>
+              </div>
             </li>
           </ul>
+
         </div>
       </section>
     </main>
@@ -105,14 +116,17 @@
           </a>
           <ul>
             <li>
-              <a target="mailto:" href="">Email:</a>
+              <a target="mailto:" href="">Email</a>
             </li>
+            <li>|</li>
             <li>
-              <a target="tel:" href="">Phone:</a>
+              <a target="tel:" href="">Phone</a>
             </li>
+            <li>|</li>
             <li>
               <a target=" _blank" href="https://github.com/caseyjoy">Github</a>
             </li>
+            <li>|</li>
             <li>
               <a target="_blank" href="https://gitlab.com/caseyjoy">Gitlab</a>
             </li>
