Fixed up the Meter layout

--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
         </div>
       </section>
 
-      <section id="skills" class="blue">
+      <section class="blue">
         <div class="container">
           <h3>Skills</h3>
-          <ul>
-            <li>
-              <h5>Art/Design</h5>
+          <ul id="skills">
+            <li class="skill">
+              <h5 class="skill-name">Art/Design | 8 </h5>
               <meter min="0" max="10" value="8"></meter>
             </li>
-            <li>
-              <h5>Programming</h5>
+            <li class="skill">
+              <h5 class="skill-name">Programming | 6 </h5>
               <meter min="0" max="10" value="6"></meter>
             </li>
           </ul>
@@ -105,16 +105,17 @@
     </main>
     <footer>
       <section id="contact">
-        <div class="container">
-          <h2>Casey Joy</h2>
-          <h5>Software Developer, Designer, Artist</h5>
+        <div class="container" id="footer-row">
+            <div>Casey Joy</div>
+            <div>Software Developer, Designer</div>
+          
 
-          <a href="./CV.txt" download>
-            <button>
-              Download CV
-            </button>
-          </a>
+            
           <ul>
+            <li>
+              <a href="./CV.txt" download>CV</a>
+              </li>
+              <li>|</li>
             <li>
               <a target="mailto:" href="">Email</a>
             </li>
