--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section id="info">
           <div>
             <h1>Casey Joy</h1>
-            <h3>Software Developer, Designer, Artist</h3>
+            <h3>Software Developer, Designer</h3>
           </div>
           <img alt="An image of Casey Joy" src="./casey_resized.jpg">
         </section>
