Working on style

--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
         </div>
       </section>
 
-      <section class="blue">
+      <section id="skills" class="blue">
         <div class="container">
           <h3>Skills</h3>
-          <ul id="skills">
+          <ul id="skills-container">
             <li class="skill">
               <h5 class="skill-name">Art/Design | 8 </h5>
               <meter min="0" max="10" value="8"></meter>
@@ -106,16 +106,16 @@
     <footer>
       <section id="contact">
         <div class="container" id="footer-row">
-            <div>Casey Joy</div>
-            <div>Software Developer, Designer</div>
-          
+          <div>Casey Joy</div>
+          <div>Software Developer, Designer</div>
 
-            
+
+
           <ul>
             <li>
               <a href="./CV.txt" download>CV</a>
-              </li>
-              <li>|</li>
+            </li>
+            <li>|</li>
             <li>
               <a target="mailto:" href="">Email</a>
             </li>
