Made job titles in experience bold

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="blue">
       <div class="container">
         <nav class="menu">
-          <div>Casey Joy</div>
+          <div id="name-top">Casey Joy</div>
           <ul>
             <li><a href="#about" class="menu-link">about</a></li>
             <li>|</li>
@@ -84,7 +84,7 @@
                 <div class="company">Meticulon</div>
               </div>
               <div class="job-col-right">
-                <div>QA Tester, Jr Software Developer</div>
+                <div class="job-title">QA Tester, Jr Software Developer</div>
                 <div class="summary">Did software QA, development work.</div>
               </div>
             </li>
@@ -94,7 +94,7 @@
                 <div class="company">Auticon</div>
               </div>
               <div class="job-col-right">
-                <div>Jr Software Developer</div>
+                <div class="job-title">Jr Software Developer</div>
                 <div class="summary">Did software development work.</div>
               </div>
             </li>
@@ -106,8 +106,8 @@
     <footer>
       <section id="contact">
         <div class="container" id="footer-row">
-          <div>Casey Joy</div>
-          <div>Software Developer, Designer</div>
+          <div id="name-bottom">Casey Joy</div>
+          <div id="title-bottom">Software Developer, Designer</div>
 
 
 
